--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,11 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/charity-donation?serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/charity?serverTimezone=UTC&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=coderslab
-
+spring.datasource.initialization-mode=always
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.show-sql=true
+#spring.datasource.data=./data.sql
 
 spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
@@ -11,3 +14,9 @@ spring.mvc.locale-resolver=fixed
 
 logging.level.org.springframework.web=DEBUG
 logging.level.org.hibernate=ERROR
+
+
+
+spring.thymeleaf.cache=false
+spring.thymeleaf.mode=HTML
+spring.thymeleaf.encoding=utf-8
