--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/charity?serverTimezone=UTC&useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/charity?allowPublicKeyRetrieval=true&serverTimezone=UTC&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=coderslab
 spring.datasource.initialization-mode=always
