--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,11 @@
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.datasource.url=jdbc:mysql://localhost:3306/charity?allowPublicKeyRetrieval=true&serverTimezone=UTC&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=coderslab
 spring.datasource.initialization-mode=always
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
-#spring.datasource.data=./data.sql
+
 
 
 logging.level.org.springframework.web=DEBUG
